syntax = "proto3";

option java_package = "hu.bme.mit.inf.modes3.messaging.mms.messages";
option java_multiple_files = true;

enum SegmentStateValue {
	DISABLED = 0;
	ENABLED = 1;
}

enum TrainDirectionValue {
	FORWARD = 0;
	BACKWARD = 1;
}

enum TurnoutStateValue {
	STRAIGHT = 0;
	DIVERGENT = 1;
}

enum SegmentOccupancyValue {
	FREE = 0;
	OCCUPIED = 1;
}

enum YakinduConnectionDirection {
	LEFT = 0;
	RIGHT = 1;
	BOTTOM = 2;
}
