syntax = "proto3";

import "Enums.proto";
import "SegmentCommand.proto";
import "SegmentState.proto";
import "TrainCurrentSegment.proto";
import "TrainCurrentSpeed.proto";
import "TrainFunctionCommand.proto";
import "TrainReferenceSpeed.proto";
import "TrainReferenceSpeedCommand.proto";
import "TurnoutCommand.proto";
import "TurnoutState.proto";
import "SegmentOccupancy.proto";
import "YakinduReleaseTo.proto";
import "YakinduCanGoTo.proto";
import "YakinduCannotGoTo.proto";
import "YakinduReserveTo.proto";

option java_package = "hu.bme.mit.inf.modes3.messaging.mms.messages";
option java_multiple_files = true;

message Message {
	MessageType type = 1;

	SegmentCommand segmentCommand = 2;
	SegmentState segmentState = 3;
	TrainCurrentSegment trainCurrentSegment = 4;
	TrainCurrentSpeed trainCurrentSpeed = 5;
	TrainFunctionCommand trainFunctionCommand = 6;
	TrainReferenceSpeed trainReferenceSpeed = 7;
	TrainReferenceSpeedCommand trainReferenceSpeedCommand = 8;
	TurnoutCommand turnoutCommand = 9;
	TurnoutState turnoutState = 10;
	SegmentOccupancy segmentOccupancy = 11;
	YakinduReleaseTo yakinduReleaseTo = 12;
	YakinduCanGoTo yakinduCanGoTo = 13;
	YakinduCannotGoTo yakinduCannotGoTo = 14;
	YakinduReserveTo yakinduReserveTo = 15;
}
